fix vertical and horizontal position in layout and start NetworkManager